changes for static libraries 2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@
 #
 # ----------------------------------------------------------------------------
 
-set(OPENCV_LINKER_LIBS ${OPENCV_LINKER_LIBS} ${PNG_LIBRARY} ${JPEG_LIBRARY} ${TIFF_LIBRARY})
+set(OPENCV_LINKER_LIBS ${OPENCV_LINKER_LIBS} ${PNG_LIBRARY} ${JPEG_LIBRARY} ${TIFF_LIBRARY} libopenjp2)
 
 # Disable in-source builds to prevent source tree corruption.
 if(" ${CMAKE_SOURCE_DIR}" STREQUAL " ${CMAKE_BINARY_DIR}")
